feat(cli): add extra sampler param
