# runner/server/docs/swagger.yaml
@@ -143,6 +143,20 @@ components:
           maximum: 1
           default: 0.95
           description: An alternative to sampling with temperature, called nucleus sampling
+        top_k:
+          type: number
+          format: float
+          minimum: 0
+          maximum: 1
+          default: 0.0
+          description: An alternative to sampling with temperature, called top-k sampling
+        min_p:
+          type: number
+          format: float
+          minimum: 0
+          maximum: 1
+          default: 0.0
+          description: An alternative to sampling with temperature, called nucleus sampling
         n:
           type: integer
           minimum: 1
@@ -166,6 +180,13 @@ components:
             - type: array
               items: { type: string }
           description: Up to 4 sequences where the API will stop generating further tokens
+        repetition_penalty:
+          type: number
+          format: float
+          minimum: 0
+          maximum: 100
+          default: 1.0
+          description: The parameter for repetition penalty. 1.0 means no penalty
         presence_penalty:
           type: number
           format: float
